docs: update time table
just learn from AC and update here

--- a/index.html
+++ b/index.html
@@ -1,13 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site</title>
-</head>
-<body>
-    hello this is abhay!
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LEARNING</title>
+  </head>
+  <body>
+    <hr />
+    <h1>HOME</h1>
+    <!-- target="_blank" used for redirect to 2nd page 
+        
+    hr for horizontal rule----------------------------------------------------------
+    <br> for break
+    <h1> for heading
     
-</body>
+  
+  
+  -->
+    <a href="https://www.google.com" target="_blank">Google </a>
+    <h2><a href="page2.html">page2</a></h2>
+    <hr />
+    <img src="img/img.png" alt="here is an image" width="700" />
+    <hr />
+    <video
+      src="video/TTT.mp4"
+      width="350"
+      controls
+      loop
+      muted
+      poster="img/img.png"
+    ></video>
+    <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Bndkkt-xqls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   
+<iframe src="http://gjpjs.org/" frameborder="0" width="560" height="600" ></iframe>
+-->
+    <hr />
+    <h2>Topic: table</h2>
+    <hr />
+    <!--
+  <table>  for table
+    <tr> for table row
+      <td>  for table data 
+<th> for table heading
+  <th rowspan="2">$50</th>  for adding 2 row data 
+  <thead> for heading
+    <tbody> for all content inside table
+      <tfoot> for footer , it is downside of the table
+
+
+
+-->
+
+    <table>
+      <thead>
+        <tr>
+          <th>Subject</th>
+          <th>Theory</th>
+          <th>Practical</th>
+          <th>Total marks</th>
+          <th>Grades</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>English</td>
+          <td>75</td>
+          <td>-</td>
+          <td>79</td>
+          <td>A1</td>
+        </tr>
+        <tr>
+          <td>Mathmatics</td>
+          <td>90</td>
+          <td>9</td>
+          <td>79</td>
+          <td>B1</td>
+        </tr>
+        <tr>
+          <td>computer science</td>
+          <td>12</td>
+          <td>34</td>
+          <td>76</td>
+          <td>B2</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <th colspan="5">Result:Pass</th>
+      </tfoot>
+    </table>
+    <hr />
+    <h1>lecture 3</h1>
+    <hr />
+    <!--Form Element
+      2 important attributes
+       <form method="get">
+        <form method="get" action="index.php">
+    -->
+  </body>
 </html>
