--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Abhay Chaturvedi</title>
 </head>
 <body>
-    <h1>Hello My Name is Abhay chaturvedi</h1>
-    
+    <h1>Hello <br> My Name is Abhay chaturvedi</h1>
+    <hr>
+
 </body>
 </html>
