--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Abhay Chaturvedi</title>
 </head>
 <body>
-    <h1>Hello :) <br>  My Name is Abhay chaturvedi '_' </h1>
+    <h1>Hello :) <br>  My Name is Abhay chaturvedi *_* </h1>
     <hr>
-
+    
 </body>
 </html>
