--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Hello :) <br>  My Name is Abhay chaturvedi :) </h1>
-    <hr>.
+    <hr>
+
+    <h2>now is this visible</h2>
     
 </body>
 </html>
