--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Abhay Chaturvedi</title>
 </head>
 <body>
-    <h1>Hello :) <br>  My Name is Abhay chaturvedi :) </h1>
+    <h1>Hello :) <br>  </h1>
     <hr>
 
-     <p>------------------------------</p>
+    <a href="https://abhaychaturvedi.netlify.app/">Abhay Chaturvedi</a>
     
 </body>
 </html>
