--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <hr>
 
     <a href="https://abhaychaturvedi.netlify.app/">Abhay Chaturvedi</a>
+    <img src="https://pbs.twimg.com/profile_images/1261136642124980224/EmWedpqV_reasonably_small.jpg" alt="image">
     
 </body>
 </html>
