--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Hello :) <br>  My Name is Abhay chaturvedi :) </h1>
     <hr>
 
-    <a href="https://abhaychaturvedi.netlify.app/">Abhay Chaturvedi</a>
+    <a href="https://abhaychaturvedi.netlify.app/" target="_blank">Abhay Chaturvedi</a>
     <hr>
     <img src="https://pbs.twimg.com/profile_images/1261136642124980224/EmWedpqV_reasonably_small.jpg" alt="image">
     
