--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Abhay Chaturvedi</title>
 </head>
 <body>
-    <h1>Hello :) <br>  My Name is Abhay chaturvedi :) </h1>
+    <h1>Hello :) <br>  My Name is Abhay chaturvedi  </h1>
     <hr>
 
     <a href="https://abhaychaturvedi.netlify.app/" target="_blank">Abhay Chaturvedi</a>
